<resources>
    <string name="app_name">WanderLust</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_lastname">Nachname</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_name">This name is invalid</string>
    <string name="error_invalid_lastname">This lastname is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password or email address is incorrect</string>
    <string name="error_user_exist">This user already exist!</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Wanderlust</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="route_waehlen">Route wählen</string>
    <string name="navigation">Navigation</string>
    <string name="profil">Profil</string>
    <string name="evaluation">Evaluation</string>
    <string name="settings">Einstellungen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="route_info">Routen Info</string>
    <string name="own_material">Eigenes Kartenmaterial</string>
    <string name="public_pictures">Fotos öffentlich</string>
    <string name="title_activity_maps">Map</string>
    <string name="walkedWay">"Gelaufene Strecker: "</string>
    <string name="height">"Höhe: "</string>
    <string name="Duration">"Dauer: "</string>
</resources>
