<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/navigation" />
        <item
            android:id="@+id/nav_routes"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/route_waehlen" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/profil" />
        <item
            android:id="@+id/nav_evaluation"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/evaluation" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

   <!-- <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item> -->

</menu>
